src/test/deca/syntax/invalid/method_body/test_method_body_return_without_semi.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
//  no viable alternative at input '}'
// Historique:
//    cree le 01/01/2024

class A {   
    void f(int a) {
        int b;
        b = a + 1;
        return b
    }
}
